# bevy-reproducer

./: Cargo.toml
assets/shader/: cube.frag
src/: cube.rs  light.rs  main.rs
