[package]
name = "am"
version = "0.2.0"
authors = ["Andreas Rammhold <andreas@rammhold.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "master" }

[patch.crates-io]

